CppEditor: Support try/catch in built-in indenter

Fixes: QTCREATORBUG-29452
Change-Id: Icf3d86a6080aeb741436800ae77af7c8bec3155c
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>